Moved to 6811 core. Because CPX now use full flags for comparison, some old 6800 applications can work wrong

--- a/p601zero1.sty
+++ b/p601zero1.sty
@@ -117,7 +117,7 @@
     <Property name="PROP_PAR_MultiSeedSortMode" value="Worst Slack" time="0"/>
     <Property name="PROP_PAR_NewRouteParDes" value="NBR" time="0"/>
     <Property name="PROP_PAR_PARClockSkew" value="Off" time="0"/>
-    <Property name="PROP_PAR_PARModArgs" value="" time="0"/>
+    <Property name="PROP_PAR_PARModArgs" value="-exp parHold=2:parHoldLimit=8192" time="0"/>
     <Property name="PROP_PAR_ParGuideRepMatch" value="False" time="0"/>
     <Property name="PROP_PAR_ParMatchFact" value="" time="0"/>
     <Property name="PROP_PAR_ParMultiNodeList" value="" time="0"/>
@@ -135,7 +135,7 @@
     <Property name="PROP_PAR_RunParWithTrce" value="False" time="0"/>
     <Property name="PROP_PAR_SaveBestRsltParDes" value="1" time="0"/>
     <Property name="PROP_PAR_StopZero" value="False" time="0"/>
-    <Property name="PROP_PAR_parHold" value="On" time="0"/>
+    <Property name="PROP_PAR_parHold" value="On" time="4"/>
     <Property name="PROP_PAR_parPathBased" value="Off" time="0"/>
     <Property name="PROP_PRE_CmdLineArgs" value="" time="0"/>
     <Property name="PROP_PRE_EdfArrayBoundsCase" value="False" time="0"/>
